interface ISpeechSynthesizerCallbacksAcceptable {
    void SpeechSynthesizerDidFinishSpeech ();
    void SpeechSynthesizerDebugInfo (string description);
}
